// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementSegment renders correct snapshot 1`] = `
<div>
  <div>
    <div
      class="DescribeElementSegment-inner-3"
    >
      <span>
        'expectedChild'
      </span>
    </div>
  </div>
</div>
`;

exports[`DescribeElementSegment renders correct snapshot with invert switch 1`] = `
<div>
  <div
    class="DescribeElementSegment-outerDark-4"
  >
    <div
      class="DescribeElementSegment-inner-6"
    >
      <span>
        'expectedChild'
      </span>
    </div>
  </div>
</div>
`;
